--- a/style.css
+++ b/style.css
@@ -1,39 +1,24 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     font-family: 'Black Han Sans', sans-serif;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
-.wrapper{
+.container{
+    text-align: center;
+    padding: 15em 0;
+    background: #222;
     width: 100%;
     border:1px solid #ccc;
+    background-image: url(/resource/ezgif.com-gif-maker.gif);
 }
-.logo{
-    width:300px;
+.title{
+    color:white;
 }
 .js-animate-rot{
     animation:rot 0.25s ease 2;
     font-size:1.4em;
-    position: absolute;
-}
-
-@media only screen and (min-width: 768px) {
-    body{
-        font-family: 'Black Han Sans', sans-serif;
-        min-height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .wrapper{
-        height: 1020px;
-        width: 480px;
-        border:1px solid #ccc;
-    }
-    .logo{
-        width:800px;
-    }
 }
 
 @keyframes rot{
