--- a/style.css
+++ b/style.css
@@ -38,3 +38,45 @@ body{
     75%{transform:rotateZ(-3deg)}
     100%{transform:rotateZ(0)}
 }
+
+.dialog{
+    position: relative;
+    top:10%;
+    left:50%;
+    width:45%;
+    min-width: 300px;
+    transform: translate(-50%);
+    border: 1px solid lightsteelblue;
+    border-radius: 0.3em;
+    background-color: white;
+}
+
+.dialog-header{
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid lightsteelblue;
+}
+
+.dialog-header .dialog-close{
+    cursor:pointer;
+    border:none;
+    outline: none;
+    background: none;
+}
+
+.dialog-body{
+    padding: 10px 15px;  
+}
+
+#overlay{
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.3);
+    z-index: 1;
+    overflow: auto;  
+}
