--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     background: #222;
     width: 100%;
     border:1px solid #ccc;
-    background-image: url(https://makeanithing.github.io/makeanithing/resource/ezgif.com-gif-maker.gif);
+    background-image: url(https://makeanithing.github.io/resource/ezgif.com-gif-maker.gif);
     background-position: center;
 }
 .container .title{
